--- a/java-service1/Dockerfile
+++ b/java-service1/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:17
-COPY target/opentelemetry-0.0.1-SNAPSHOT.jar opentelemetry.jar
-ENTRYPOINT ["java", "-jar", "opentelemetry.jar"]
+COPY target/java-service1-0.0.1-SNAPSHOT.jar java-service1.jar
+ENTRYPOINT ["java", "-jar", "java-service1.jar"]
