--- a/java-service2/Dockerfile
+++ b/java-service2/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:17
-COPY target/opentelemetry-0.0.1-SNAPSHOT.jar opentelemetry.jar
-ENTRYPOINT ["java", "-jar", "opentelemetry.jar"]
+COPY target/java-service2-0.0.1-SNAPSHOT.jar java-service2.jar
+ENTRYPOINT ["java", "-jar", "java-service2.jar"]
