--- a/otel-inst.yaml
+++ b/otel-inst.yaml
@@ -1,14 +1,14 @@
 apiVersion: opentelemetry.io/v1alpha1
 kind: Instrumentation
 metadata:
-  name: demo-instrumentation
+  name: my-instrumentation
 spec:
   exporter:
-    endpoint: http://demo-collector:4317
+    endpoint: http://10.105.23.19:4317
   propagators:
     - tracecontext
     - baggage
+    - b3
   sampler:
     type: parentbased_traceidratio
-    argument: "1"
-
+    argument: "0.25"
